--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "streamlist-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+  "node": ">=18",
+  "npm": ">=11.2.0"
+},
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
